hash-gen/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hash-gen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hash-gen
  template:
    metadata:
      labels:
        app: hash-gen
    spec:
      containers:
        - name: hash-gen
          image: 4925k/hash-gen
