hash-gen/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hash-gen-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hash/status
        pathType: Prefix
        backend:
          service:
            name: hash-gen
            port:
              number: 2346
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong
            port: 
              number: 2347
